2002-07-24  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.h (cob_decimal): Removed.
	* numeric.c, numeric.h: Relace `cob_decimal' by `struct cob_decimal *'.

2002-07-14  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (cob_set_int): Moved from numeric.c.
	Reimplemented using `cob_move'.

2002-07-13  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c (cob_decimal_get_double): Bug fix in calculation.
	(cob_decimal_set_double): Take effect of decimal figures.

2002-07-08  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_file): New field `assign'.
	* fileio.c, fileio.h (cob_open): Do not take file name.  Use `assign'.

2002-07-05  Keisuke Nishida  <knishida@netlab.jp>

	* screenio.c, screenio.h (cob_screen_attr): New function.
	* screenio.h (COB_SCREEN_TYPE_ATTRIBUTE): New type.
	(cob_screen_data): New entry `dummy'.

2002-07-05  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_file): Renamed from cob_file_desc.
	* fileio.c: Updated.

2002-07-01  Keisuke Nishida  <knishida@netlab.jp>

	* screenio.c, screenio.h: New files.
	* Makefile.am: Add them.

2002-06-17  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_call_resolve): Don't set cob_status.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* call.c (cob_resolve): Use COB_MODULE_EXT.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.c, common.h (cob_alnum_desc): New variable.
	* common.c (cob_zero, cob_space, cob_high, cob_low, cob_quote): Use it.
	* move.c (cob_mem_move): Use it.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* Allow cob_field.desc to be NULL.
	* common.h, common.c, move.c, numeric.c: Updated.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FIELD_IS_VALID): New macro.
	* fileio.c, strings.c: Use `COB_FIELD_IS_VALID'.

2002-06-11  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_field): Field `size' moved from `cob_field_desc'.
	(COB_FIELD_SIZE, COB_FIELD_DATA): Removed.