@@ -1,3 +1,7 @@
+2002-07-30  Keisuke Nishida  <knishida@netlab.jp>
+
+	* screenio.c: Check configuration.
+
 2002-07-24  Keisuke Nishida  <knishida@netlab.jp>
 
 	* numeric.h (cob_decimal): Removed.
